--- a/app/views/assets/_form.html.haml
+++ b/app/views/assets/_form.html.haml
@@ -1,25 +1,24 @@
-= form_for @asset do |f|
-  -if @asset.errors.any?
-    #error_explanation
-      %h2= "#{pluralize(@asset.errors.count, "error")} prohibited this asset from being saved:"
-      %ul
-        - @asset.errors.full_messages.each do |msg|
-          %li= msg
-
-  .field
-    = f.label :asset_code
-    = f.text_field :asset_code
-  .field
-    = f.label :category
-    = f.text_field :category
-  .field
-    = f.label :description
-    = f.text_area :description
-  .field
-    = f.label :latitude
-    = f.text_field :latitude
-  .field
-    = f.label :longitude
-    = f.text_field :longitude
-  .actions
-    = f.submit 'Save'
+= form_for @asset, :html => { :class => 'form-horizontal' } do |f|
+  .control-group
+    = f.label :asset_code, :class => 'control-label'
+    .controls
+      = f.text_field :asset_code, :class => 'text_field'
+  .control-group
+    = f.label :category, :class => 'control-label'
+    .controls
+      = f.text_field :category, :class => 'text_field'
+  .control-group
+    = f.label :description, :class => 'control-label'
+    .controls
+      = f.text_area :description, :class => 'text_area'
+  .control-group
+    = f.label :latitude, :class => 'control-label'
+    .controls
+      = f.text_field :latitude, :class => 'text_field'
+  .control-group
+    = f.label :longitude, :class => 'control-label'
+    .controls
+      = f.text_field :longitude, :class => 'text_field'
+  .form-actions
+    = f.submit nil, :class => 'btn btn-primary'
+    = link_to t('.cancel', :default => t("helpers.links.cancel")), assets_path, :class => 'btn'
