--- a/app/views/assets/edit.html.haml
+++ b/app/views/assets/edit.html.haml
@@ -1,7 +1,3 @@
-%h1 Editing asset
-
-= render 'form'
-
-= link_to 'Show', @asset
-\|
-= link_to 'Back', assets_path
+- model_class = @asset.class
+%h1=t '.title', :default => t('helpers.titles.edit', :model => model_class.model_name.human, :default => "Edit #{model_class.model_name.human}")
+= render :partial => "form"
