--- a/app/views/assets/index.html.haml
+++ b/app/views/assets/index.html.haml
@@ -1,27 +1,28 @@
-%h1 Listing assets
-
-%table
-  %tr
-    %th Asset code
-    %th Category
-    %th Description
-    %th Latitude
-    %th Longitude
-    %th
-    %th
-    %th
-
-  - @assets.each do |asset|
+- model_class = Asset.new.class
+%h1=t '.title', :default => model_class.model_name.human.pluralize
+%table.table.table-striped
+  %thead
     %tr
-      %td= asset.asset_code
-      %td= asset.category
-      %td= asset.description
-      %td= asset.latitude
-      %td= asset.longitude
-      %td= link_to 'Show', asset
-      %td= link_to 'Edit', edit_asset_path(asset)
-      %td= link_to 'Destroy', asset, :confirm => 'Are you sure?', :method => :delete
+      %th= model_class.human_attribute_name(:id)
+      %th= model_class.human_attribute_name(:asset_code)
+      %th= model_class.human_attribute_name(:category)
+      %th= model_class.human_attribute_name(:description)
+      %th= model_class.human_attribute_name(:latitude)
+      %th= model_class.human_attribute_name(:longitude)
+      %th= model_class.human_attribute_name(:created_at)
+      %th=t '.actions', :default => t("helpers.actions")
+  %tbody
+    - @assets.each do |asset|
+      %tr
+        %td= link_to asset.id, asset_path(asset)
+        %td= asset.asset_code
+        %td= asset.category
+        %td= asset.description
+        %td= asset.latitude
+        %td= asset.longitude
+        %td=l asset.created_at
+        %td
+          = link_to t('.edit', :default => t("helpers.links.edit")), edit_asset_path(asset), :class => 'btn btn-mini'
+          = link_to t('.destroy', :default => t("helpers.links.destroy")), asset_path(asset), :method => :delete, :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')), :class => 'btn btn-mini btn-danger'
 
-%br
-
-= link_to 'New Asset', new_asset_path
+= link_to t('.new', :default => t("helpers.links.new")), new_asset_path, :class => 'btn btn-primary'
