--- a/app/views/assets/new.html.haml
+++ b/app/views/assets/new.html.haml
@@ -1,5 +1,3 @@
-%h1 New asset
-
-= render 'form'
-
-= link_to 'Back', assets_path
+- model_class = @asset.class
+%h1=t '.title', :default => t('helpers.titles.new', :model => model_class.model_name.human, :default => "New #{model_class.model_name.human}")
+= render :partial => "form"
