Added Routines and sidebar partial

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -22,5 +22,11 @@
           .row
             .span12
               = render 'layouts/messages'
+              -#= yield
+          .row
+            .span3
+              = render 'layouts/sidebar'
+            .span9
               = yield
           %footer
+            %p &copy; gRokkLab 2012
