--- a/app/views/layouts/_sidebar.html.haml
+++ b/app/views/layouts/_sidebar.html.haml
@@ -1,6 +1,9 @@
-.well.sidebar-nav
-  %ul.nav.nav-list
-    %li.nav-header Manage
-    %li= link_to "Items", items_path
-    %li= link_to "Assets", assets_path
-    %li= link_to "Routines", routines_path
+- if user_signed_in?
+  .well.sidebar-nav
+    %ul.nav.nav-list
+      %li.nav-header Manage
+      - if current_user.has_role? :admin
+        %li= link_to('Users', users_path)
+      %li= link_to "Items", items_path
+      -#%li= link_to "Assets", assets_path
+      %li= link_to "Routines", routines_path
