--- a/app/views/layouts/_sidebar.html.haml
+++ b/app/views/layouts/_sidebar.html.haml
@@ -4,6 +4,16 @@
       %li.nav-header Manage
       - if current_user.has_role? :admin
         %li= link_to('Users', users_path)
-      %li= link_to "Items", items_path
-      -#%li= link_to "Assets", assets_path
-      %li= link_to "Routines", routines_path
+        %li= link_to "Items", items_path
+        %li= link_to "Routines", routines_path
+      - if current_user.has_role? :mgmt
+        %li= link_to "Items", items_path
+        %li= link_to "Routines", routines_path
+        %li= link_to "Issues", root_path
+        %li= link_to "Work Orders", root_path
+        %li= link_to "Purchase Orders", root_path
+      - if current_user.has_role? :tech
+        %li= link_to "Items", items_path
+        %li= link_to "Routines", routines_path
+        %li= link_to "Issues", root_path
+        %li= link_to "Work Orders", root_path
