--- a/app/views/layouts/_messages.html.haml
+++ b/app/views/layouts/_messages.html.haml
@@ -1,4 +1,5 @@
 - flash.each do |name, msg|
+  - puts "message: "+msg
   %div{:class => "alert alert-#{name == :notice ? "success" : "error"}"}
     %a.close{"data-dismiss" => "alert"} ×
     = content_tag :div, msg, :id => "flash_#{name}" if msg.is_a?(String)
