--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -1,4 +1,4 @@
-= link_to "Tenancy", root_path, :class => 'brand'
+= link_to "Sabertooth", root_path, :class => 'brand'
 %ul.nav
   - if user_signed_in?
     %li
