--- a/app/views/items/_form.html.haml
+++ b/app/views/items/_form.html.haml
@@ -1,5 +1,10 @@
 = form_for @item, :html => { :class => 'form-horizontal' } do |f|
   .control-group
+    = f.label :parent, :class => 'control-label'
+    .controls
+      -#= f.text_field :parent_id, :class => 'text_field'
+      = f.collection_select :parent_id, Item.all(:order => "id"), :id, :item_code, :include_blank => true
+  .control-group
     = f.label :item_code, :class => 'control-label'
     .controls
       = f.text_field :item_code, :class => 'text_field'
@@ -13,14 +18,14 @@
     = f.label :description, :class => 'control-label'
     .controls
       = f.text_area :description, :class => 'text_area', :rows => 6
-  .control-group
-    = f.label :latitude, :class => 'control-label'
-    .controls
-      = f.text_field :latitude, :class => 'text_field'
-  .control-group
-    = f.label :longitude, :class => 'control-label'
-    .controls
-      = f.text_field :longitude, :class => 'text_field'
+  -#.control-group
+  -#  = f.label :latitude, :class => 'control-label'
+  -#  .controls
+  -#    = f.text_field :latitude, :class => 'text_field'
+  -#.control-group
+  -#  = f.label :longitude, :class => 'control-label'
+  -#  .controls
+  -#    = f.text_field :longitude, :class => 'text_field'
   .form-actions
     = f.submit nil, :class => 'btn btn-primary'
     = link_to t('.cancel', :default => t("helpers.links.cancel")), items_path, :class => 'btn'
